feat(security): implementation for localstorage elliminated and secure for navigate